--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -17,17 +17,41 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/math_version_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:gravity="center"
-                android:text="@string/title_name"
+                android:text="@string/math_version_name"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/math_version_question_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:text="@string/textView_math_version"
+                    android:textColor="@color/white"
+                    android:drawableStart="@drawable/ic_baseline_volume_up_24"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,14 +70,10 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:hint="@string/user_name"
+                    android:hint="@string/answer_math_voice"
                     android:textSize="20sp"
                     app:counterEnabled="true"
-                    app:counterMaxLength="20"
-                    app:endIconMode="clear_text"
-                    app:helperText="@string/required"
-                    app:helperTextTextColor="@color/Red"
-                    app:startIconDrawable="@drawable/ic_baseline_person_24">
+                    app:startIconDrawable="@drawable/ic_baseline_mic_24">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_nameET"
@@ -62,9 +82,8 @@
                         android:maxLength="21"
                         android:maxLines="1"
                         android:paddingStart="16dp"
-                        android:paddingEnd="16dp" />
+                        android:paddingEnd="16dp"/>
                 </com.google.android.material.textfield.TextInputLayout>
-
 
             </LinearLayout>
 
@@ -72,44 +91,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:baselineAligned="false"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:paddingStart="100dp"
+                android:paddingEnd="100dp">
 
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/input_password"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
+                <Button
+                    android:id="@+id/Button_finish_answer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:layout_weight="1"
+                    android:background="@drawable/round_border"
                     android:gravity="center"
-                    android:hint="@string/user_password"
-                    android:textSize="20sp"
-                    app:counterEnabled="true"
-                    app:counterMaxLength="12"
-                    app:endIconMode="custom"
-                    app:errorEnabled="true"
-                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
-                    app:helperText="@string/required"
-                    app:helperTextTextColor="@color/Red"
-                    app:startIconDrawable="@drawable/ic_baseline_lock_24">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/input_phoneET"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:maxLength="13"
-                        android:maxLines="1"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:hint="@string/Button_finish_answer_text"
+                    android:padding="10dp"
+                    android:textColorHint="@color/white"
+                    android:textSize="16sp"
+                    app:backgroundTint="#50C1B6" />
 
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
