--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -90,7 +90,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/Ed_address"
+            android:id="@+id/Et_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
