added all the updated fragment

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -11,8 +11,8 @@
         android:label="CollectMissingDetails"
         tools:layout="@layout/collect_missingdetails">
         <action
-            android:id="@+id/action_collectMissingDetails_to_secondQuestion"
-            app:destination="@id/secondQuestion" />
+            android:id="@+id/action_collectMissingDetails_to_informationFragment"
+            app:destination="@id/informationFragment" />
     </fragment>
     <fragment
         android:id="@+id/secondQuestion"
@@ -86,8 +86,8 @@
         android:label="Sixth_question"
         tools:layout="@layout/sixth_question">
         <action
-            android:id="@+id/action_sixth_question_to_eighthQuestion"
-            app:destination="@id/eighthQuestion" />
+            android:id="@+id/action_sixth_question_to_SeventhQuestion"
+            app:destination="@id/SeventhQuestion" />
     </fragment>
     <fragment
         android:id="@+id/SeventhQuestion"
@@ -124,4 +124,13 @@
         android:name="com.example.minimental.fragments.TenthQuestion"
         android:label="TenthQuestion"
         tools:layout="@layout/tenth_question"/>
+    <fragment
+        android:id="@+id/informationFragment"
+        android:name="com.example.minimental.fragments.InformationFragment"
+        android:label="InformationFragment"
+        tools:layout="@layout/information_fragment">
+        <action
+            android:id="@+id/action_informationFragment_to_secondQuestion"
+            app:destination="@id/secondQuestion" />
+    </fragment>
 </navigation>
