--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/pic_10layout">
 
         <TextView
             android:id="@+id/tenth_question_title"
@@ -31,11 +33,42 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-
-    <com.example.minimental.Painter
-        android:id="@+id/painter_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="400dp"
+        android:id="@+id/painter_viewLayout"
+        android:layout_below="@+id/pic_10layout">
+
+        <com.example.minimental.Painter
+            android:id="@+id/painter_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/painter_viewLayout"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:paddingStart="100dp"
+        android:paddingEnd="100dp">
+
+        <Button
+            android:id="@+id/next_Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_border"
+            android:gravity="center"
+            android:hint="@string/button_next"
+            android:padding="10dp"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
+            app:backgroundTint="#50C1B6" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
