--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -29,6 +29,14 @@
                 android:textSize="40sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="40sp"
+                android:text="result"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/result_txt_math"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
