--- a/app/src/main/res/layout/second_question.xml
+++ b/app/src/main/res/layout/second_question.xml
@@ -29,6 +29,7 @@
                 android:textSize="40sp"
                 android:textStyle="bold" />
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,7 +101,15 @@
                 android:layout_margin="5dp"
                 android:baselineAligned="false"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="40sp"
+                    android:text="check"
+                    android:id="@+id/check_txt"/>
+
 
 
                 <ImageButton
