information screen fix

--- a/app/src/main/res/layout/information_fragment.xml
+++ b/app/src/main/res/layout/information_fragment.xml
@@ -38,6 +38,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
+                    android:maxLines="1"
+                    android:autoSizeTextType="uniform"
                     android:textSize="16sp"
                     android:text="@string/enter_currentDay"
                     android:textColor="@color/black"
@@ -86,7 +88,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
-                    android:textSize="16sp"
+                    android:layout_marginHorizontal="10dp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentMonth"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -106,6 +109,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
+                        android:autoSizeTextType="uniform"
                         android:textSize="16sp"
                         android:inputType="text"
                         android:paddingStart="10dp"
@@ -132,6 +136,7 @@
                     android:background="@drawable/shape_edit_text"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="5dp"
+                    android:autoSizeTextType="uniform"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
                     android:text="@string/enter_currentDate"
@@ -154,6 +159,7 @@
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
                         android:textSize="16sp"
+                        android:autoSizeTextType="uniform"
                         android:inputType="text"
                         android:paddingStart="10dp"
                         android:layout_weight="1" />
@@ -181,6 +187,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentYear"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -200,6 +207,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
+                        android:autoSizeTextType="uniform"
                         android:textSize="16sp"
                         android:inputType="text"
                         android:paddingStart="10dp"
@@ -228,6 +236,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentSeason"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -275,6 +284,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentCountry"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -322,6 +332,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentCity"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -341,6 +352,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
+                        android:autoSizeTextType="uniform"
                         android:textSize="16sp"
                         android:inputType="text"
                         android:paddingStart="10dp"
@@ -368,6 +380,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentStreet"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -388,6 +401,7 @@
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
                         android:textSize="16sp"
+                        android:autoSizeTextType="uniform"
                         android:inputType="text"
                         android:paddingStart="10dp"
                         android:layout_weight="1" />
@@ -414,6 +428,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentFloor"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -433,6 +448,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
+                        android:autoSizeTextType="uniform"
                         android:textSize="16sp"
                         android:inputType="text"
                         android:paddingStart="10dp"
@@ -460,6 +476,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_width="match_parent"
                     android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
                     android:text="@string/enter_currentArea"
                     android:textColor="@color/black"
                     android:paddingStart="10dp"
@@ -480,6 +497,7 @@
                         android:layout_marginEnd="5dp"
                         android:hint="@string/enter_answer"
                         android:textSize="16sp"
+                        android:autoSizeTextType="uniform"
                         android:inputType="text"
                         android:paddingStart="10dp"
                         android:layout_weight="1" />
