--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -46,7 +46,9 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/drag_Screen"
         android:layout_width="match_parent"
+        android:layout_margin="2dp"
         android:layout_height="400dp">
 
         <ImageView
